# mediasoup-connector

./: CMakeLists.txt  CODE_OF_CONDUCT.md  ConnectorFrontApi.cpp  ConnectorFrontApi.h  ConnectorFrontApiHelper.cpp  MediaSoupInterface.cpp  MediaSoupInterface.h  MediaSoupMailbox.cpp  MediaSoupMailbox.h  MediaSoupTransceiver.cpp  MediaSoupTransceiver.h  MyAudioDeviceModule.h  MyFrameGeneratorInterface.cpp  MyFrameGeneratorInterface.h  MyLogSink.cpp  MyLogSink.h  MyProducerAudioDeviceModule.h  README  README.md  mediasoup-connector.cpp  temp_demodebugging.h  temp_httpclass.h
ci/: check-format.sh
cmake/: legacy.cmake
cmake/macos/: info.plist.in
doc/: proc_handler.c
scripts/: build_webrtc.cmd  libmediasoup.bat  support_vs_mt_build.patch  webrtc.bat
scripts/mac/: build_webrtc.sh
